--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,8 @@
 
   	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
+    <link rel="stylesheet" href="assets/css/animate.css">
 </head>
 <body>
 
