--- a/portfolio.html
+++ b/portfolio.html
@@ -29,11 +29,11 @@
 						</li> 
 
 						<li id="list2">
-							<a href="Portfolio.html"> Portfolio </a>
+							<a href="portfolio.html"> Portfolio </a>
 						</li> 
 
 						<li> 
-							<a href="Contact.html">Contact </a>
+							<a href="contact.html">Contact </a>
 						</li>
 					
 				</ul>
