--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 			<p>
 
-				Hello everyone !!! Welcome, This is Rupali,Lives in tha land of happiness i.e. Portsmouth,NH.
+				Hello everyone !!! Welcome, This is Rupali,Lives in the land of happiness i.e. Portsmouth,NH.
 				I am a software Developer who loves to develope software to build great products and help businesses succeed with their goals.I appreciate good design and I am seeing it's importance more then ever in todays apps, web sites and products. 
 				
 			</p>
