--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
 
 			<h2>Portfolio </h2>
 			<hr>
-			<div class="image-h4" id="portfolio-setting">
+			<div  id="portfolio-setting">
 				<div class="portfolio">
 					<img  src="assets/image/testing.jpg" alt="Image" />
 					<h4 >Retail Domain</h4>
