--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
 							<a href="index.html"> About </a>
 						</li> 
 
-						<li id="list2">
+						<li id="setupForVerticalLine">
 							<a href="portfolio.html"> Portfolio </a>
 						</li> 
 
