--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- Author : Rupali Meshram
+	https://rupali8086.github.io/Responsive-Portfolio/contact.html -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -30,7 +32,7 @@
 							<a href="index.html"> About </a>
 						</li> 
 
-						<li id="list2">
+						<li id="setupForVerticalLine">
 							<a href="portfolio.html"> Portfolio </a>
 						</li> 
 
@@ -41,7 +43,7 @@
 				</ul>
 			</div>
 	</header>
-	
+<!--MAIN CONTENT  -->
 	<div class="onlyforBackground">
 		<div class="main-section-content">
 			<section id="paragraph-setting">
@@ -63,7 +65,7 @@
 			
 			</section>
 		</div>
-
+<!-- SIDEBAR -->
 		<div class="sidebar">
 			<aside>
 				<h3>Connect with Me</h3>
@@ -88,13 +90,10 @@
 			</aside>
 		</div>
 	</div>
-
+<!-- FOOTER -->
 	<footer id="sticky-footer">
 		Copyright &copy; 2017 Rupali Meshram 
-	</footer>
-
-
-	
+	</footer>	
 
 </body>
 </html>
